fix overflow problem and keep elements right

--- a/calculator/nightmode.css
+++ b/calculator/nightmode.css
@@ -96,7 +96,7 @@
 
 #bottom{/*result screen*/
     width: 90%;
-    height: 40px;
+    height: 50px;
     text-align: right;
     font-size: 30px;
     padding-left: 5%;
